data/derived/comb/progs/unify/prog1265.ml.out
Characters 39-52:
  if n >0 then [digitsOfInt n/10]::[n mod 10]
                ^^^^^^^^^^^^^
Error: This expression has type 'a list list
       but an expression was expected of type int
